[package]
name = "kaihan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.82"
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5"
env_logger = "0.11.5"
glob = "0.3.1"
log = "0.4.22"
minijinja = { version = "2.2", features = ["loader", "loop_controls"] }
pulldown-cmark = "0.12.1"
reqwest = { version = "0.12", features = ["json"] }
rss = "2.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
