[package]
name = "kaihan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.82"
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.30"
glob = "0.3.1"
log = "0.4.22"
minijinja = { version = "2.2", features = ["loader", "loop_controls"] }
octocrab = "0.39.0"
pulldown-cmark = "0.12.1"
rss = "2.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
